--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,15 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.2.0-alpha05' apply false
-    id 'com.android.library' version '7.2.0-alpha05' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
+buildscript {
+    ext.kotlin_version = "1.4.20"
+    repositories {
+        google()
+        jcenter()
+    }
+    dependencies {
+        def gradle = '7.2.0-alpha05'
+        classpath "com.android.tools.build:gradle:$gradle"
+
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
 }
 
 task clean(type: Delete) {
