--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
@@ -25,9 +25,13 @@ android.nonTransitiveRClass=true
 ############## Project dependency versions #########################################
 ####################################################################################
 ktxCoreVersion=1.7.0
+kotlinVersion=1.5.30
 appCompatVersion=1.4.0
 materialDesingVersion=1.4.0
 constraintVersion=2.1.2
+androidxUiVersion=1.0.0-alpha07
+composeVersion=1.0.0-alpha08
+navVersion=2.3.5
 ####################################################################################
 ############## Project test dependency versions #########################################
 ####################################################################################
