--- a/gradle.properties
+++ b/gradle.properties
@@ -32,6 +32,10 @@ constraintVersion=2.1.2
 androidxUiVersion=1.0.0-alpha07
 composeVersion=1.0.0-alpha08
 navVersion=2.3.5
+retrofitVersion=2.9.0
+gsonVersion=2.8.9
+hiltVersion=2.28-alpha
+hiltLifecycleVersion=1.0.0-alpha01
 ####################################################################################
 ############## Project test dependency versions #########################################
 ####################################################################################
