--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,10 +44,10 @@ android {
         useIR = true
     }
     composeOptions {
-        def kotlin_compiler_version = "1.4.0"
+        def kotlin_compiler_version = "1.4.21"
         kotlinCompilerVersion kotlin_compiler_version
 
-        def kotlin_compiler_extension_version = "1.0.0-alpha08"
+        def kotlin_compiler_extension_version = "1.0.0-alpha09"
         kotlinCompilerExtensionVersion kotlin_compiler_extension_version
     }
     buildFeatures {
@@ -87,6 +87,10 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:$hiltVersion"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hiltLifecycleVersion"
     kapt "androidx.hilt:hilt-compiler:$hiltLifecycleVersion"
+
+    // Glide depenrencies
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
     // Test dependencies
     testImplementation "junit:junit:$jUnitVersion"
