--- a/gradle.properties
+++ b/gradle.properties
@@ -30,12 +30,13 @@ appCompatVersion=1.4.0
 materialDesingVersion=1.4.0
 constraintVersion=2.1.2
 androidxUiVersion=1.0.0-alpha07
-composeVersion=1.0.0-alpha08
+composeVersion=1.0.0-alpha09
 navVersion=2.3.5
 retrofitVersion=2.9.0
 gsonVersion=2.8.9
 hiltVersion=2.28-alpha
 hiltLifecycleVersion=1.0.0-alpha01
+glideVersion=4.12.0
 ####################################################################################
 ############## Project test dependency versions #########################################
 ####################################################################################
